# VIGAPP060

./: .gitignore  CONTRIBUTING.md  DESARROLLO.md  DESARROLLO_3D.md  README.md  README_SHEAR.md  debug_report.tex  esquema_cortante.dxf  main.py  main.spec  pyproject.toml  report_section_flex_dxf.py  reporte_cortante_html.py  reporte_flexion_html.py  requirements.txt  tk_viga.py  viga2.0.py  viga2.0.spec
html_report/: reporte_flexion.html
icon/: README.md
local_activation/: activacion.py  generador_licencia.py  main.py
pdf_engine/: __init__.py
progreso/: estado.json
scripts/: generate_license.py  gui_generate_license.py
simple_activation/: generador_licencia.py  generador_licensias_v1.py  main.py
simple_activation/simple_activation/: generador_licensias_v1.py
src/: activation.py  activation_dialog.py  bar_properties_panel.py  beam_model.py  design_window.py  formula_window.py  memoria_window.py  menu_window.py  moment_app.py  project_manager.py  rebar_editor_widget.py  section2d_view.py  section3d_view.py  summary_view.py  utils.py  view3d_window.py
src/activacion/: __init__.py
src/activation/: __init__.py  tk_dialog.py
src/graphics/: rebar_editor_widget.py  section2d_view.py  section3d_view.py
src/models/: beam_model.py  utils.py
src/pdf_engine/: latex_renderer.py
src/sistema/: project_manager.py
src/ui/: __init__.py  design_window.py  formula_window.py  (+5 more)
tests/: test_design_window.py  test_moment_app.py  test_shear_design.py  test_shear_window.py  test_viga.py
vigapp/: __init__.py  activation_dialog.py  pdf_report.py  utils.py
(+100 files in other folders)
